Clases backend vacias para models, datastore & authentication

--- a/Tarea1/Tarea1.csproj
+++ b/Tarea1/Tarea1.csproj
@@ -161,6 +161,9 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppCode\DataStore.cs" />
+    <Compile Include="AppCode\Models.cs" />
+    <Compile Include="AppCode\SecurityHelper.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Default.aspx.cs">
@@ -210,9 +213,7 @@
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="AppCode\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
