Cambios con error 401

--- a/Tarea1/bin/Tarea1.dll.config
+++ b/Tarea1/bin/Tarea1.dll.config
@@ -3,11 +3,12 @@
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
+
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
-    <pages>
+    <pages validateRequest="false" >
       <namespaces>
         <add namespace="System.Web.Optimization"/>
       </namespaces>
@@ -42,4 +43,5 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+
 </configuration>
